--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -23,5 +23,6 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - name: set secrets
+      uses: actions/checkout@v3
       env: # Set as env variable
         super_secret: ${{ secrets.GMAIL_SECRET }}
