--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
     portainer:
-        image: portainer/portainer-cd:latest
+        image: portainer/portainer-ce:latest
         container_name: portainer
         restart: always
         ports:
