--- a/gitlab/swarm/docker_compose.yml
+++ b/gitlab/swarm/docker_compose.yml
@@ -8,9 +8,9 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - $GITLAB_HOME/data:/var/opt/gitlab
-      - $GITLAB_HOME/logs:/var/log/gitlab
-      - $GITLAB_HOME/config:/etc/gitlab
+      - gitlab_stack_data:/var/opt/gitlab
+      - gitlab_stack_logs:/var/log/gitlab
+      - gitlab_stack_config:/etc/gitlab
     shm_size: '256m'
     environment:
       GITLAB_OMNIBUS_CONFIG: "from_file('/omnibus_config.rb')"
@@ -35,3 +35,8 @@ configs:
 secrets:
   gitlab_root_password:
     file: ./root_password.txt
+
+volumes:
+  gitlab_stack_data:
+  gitlab_stack_logs:
+  gitlab_stack_config:
