--- a/gitlab/swarm/docker_compose.yml
+++ b/gitlab/swarm/docker_compose.yml
@@ -7,7 +7,6 @@ services:
       - "7022:22"
       - "7080:80"
       - "7443:443"
-      - "8989:8989"
     volumes:
       - gitlab_stack_data:/var/opt/gitlab
       - gitlab_stack_logs:/var/log/gitlab
@@ -15,16 +14,11 @@ services:
     shm_size: '256m'
     environment:
       GITLAB_OMNIBUS_CONFIG: |
-        external_url 'https://structam.com:8989'
-        gitlab_rails['initial_root_password'] = $GITLAB_ROOT_PASSWORD
+        external_url 'https://structam.com'
         gitlab_rails['gitlab_shell_ssh_port'] = 7022
     configs:
-      - source: gitlab
-        target: /omnibus_config.rb
-    secrets:
-      - gitlab_root_password
-    constraints:
-      - node.labels.main_gitlab_server == true
+    - source: gitlab_config
+      target: /omnibus_config.rb
 
   gitlab-runner:
     image: gitlab/gitlab-runner:alpine
@@ -33,12 +27,12 @@ services:
       replicas: 1
 
 configs:
-  gitlab:
-    file: ./gitlab.rb
+  gitlab_config:
+    external: True
 
 secrets:
   gitlab_root_password:
-    file: ./root_password.txt
+    external: True
 
 volumes:
   gitlab_stack_data:
